# binaryornot

./: Cargo.toml  README.md
src/: lib.rs
tests/: code_tests.rs  encoding_tests.rs  file_tests.rs  font_tests.rs  image_tests.rs  programming_artifact_tests.rs
